# big-brain

./: .gitignore  AGENTS.md  README.md  config.example.toml  install.sh  pyproject.toml
bb/api/: __main__.py  daemon.py  mcp.py
bb/cli/: main.py
bb/core/: chunk.py  config.py  embedder.py
bb/ingest/: chunker.py  file.py  pipeline.py  watcher.py
bb/ingest/chat/: claude_code.py  vscode.py
bb/llm/: __init__.py  anthropic_llm.py  base.py  factory.py  noop.py  ollama_llm.py
bb/shell/: capture.py  hook.bash  hook.zsh
bb/storage/: meta.py  vector.py
bb/storage/blob/: base.py  local.py
bb/web/: router.py
bb/web/templates/: index.html
bb/web/templates/partials/: detail.html  results.html  thought_saved.html
tests/: conftest.py  test_api.py  test_chat_importers.py  test_chunker.py  test_file_ingest.py  test_mcp_tools.py  test_pipeline.py  test_storage.py
~/.local/share/bigbrain/: meta.db
~/.local/share/bigbrain/blobs/71/: 713b4f73-0e34-4258-8eda-cabd0efb6aa2
~/.local/share/bigbrain/blobs/b6/: b6f7e397-dfa2-451c-b359-010d4a4801f6
~/.local/share/bigbrain/blobs/c5/: c52ab1f9-0ccd-4d2b-83a1-fd09a8f54270
~/.local/share/bigbrain/blobs/d0/: d0eae7af-5e9a-4f56-84e3-0f2fbb7ee2d8
